contrib/cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedIdentifierTest/bug248749.cpp
namespace bug248749 {
    template <typename T>
    void foo248749(T param) {
        T::iterator iter;
        (*iter)->boo(); // boo should be warning
    }  
}